# pypodcasts

./: .gitignore  README.md  pyproject.toml
pypodcasts/: poc.py  prepare.py  rss_tptm.rss  url_validate.py
pypodcasts/media/transcript/: python-language-summit-2024.txt  python-language-summit-2024x.txt
