[tool.poetry]
name = "pypodcasts"
version = "0.1.0"
description = "A simple podcases player written in python"
authors = ["Nikhil Bhirud"]
license = "GNU General Public License (GPL) Version 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.2"
requests = "^2.32.3"
speechrecognition = "^3.10.4"
llvmlite = "^0.43.0"
numba = "^0.60.0"
openai-whisper = "^20231117"
wordcloud = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
